[tool.poetry]
name = "aioproxy"
version = "0.1.0"
description = ""
authors = ["Gerald <gera2ld@163.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
aiohttp = "^3.6.2"
gera2ld-pyserve = "^0.0.6"
async_dns = "^1.0.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "aioproxy.cli:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

