[tool.poetry]
name = "aioproxy"
version = "0.1.0"
description = ""
authors = ["Gerald <gera2ld@163.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
aiohttp = "^3.6.2"
async_dns = "^1.0.10"
"gera2ld.socks" = "^0.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
aioproxy = "aioproxy.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

